force-app/main/default/objects/ClaimProvider__x/ClaimProvider__x.object-meta.xml
<CustomObject>
    <externalDataSource>ClaimsDataSource</externalDataSource>
    <externalName>public$claimprovider</externalName>
    <label>Claim Provider</label>
    <pluralLabel>Claim Providers</pluralLabel>
</CustomObject>