force-app/main/default/objects/ClaimProvider__x/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <externalDeveloperName>claim</externalDeveloperName>
    <inlineHelpText>ID of the claim that this record is related to.</inlineHelpText>
    <label>Claim</label>
    <length>16</length>
    <referenceTo>ClaimHeader__x</referenceTo>
    <relationshipLabel>Claim Providers</relationshipLabel>
    <relationshipName>Claim_Providers</relationshipName>
    <type>ExternalLookup</type>
</CustomField>