force-app/main/default/objects/ClaimProvider__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>name</externalDeveloperName>
    <inlineHelpText>Name of the claim provider record.</inlineHelpText>
    <label>Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>