force-app/main/default/objects/ClaimProvider__x/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>provider</externalDeveloperName>
    <inlineHelpText>ID of the provider that this record is related to.</inlineHelpText>
    <label>Provider</label>
    <referenceTo>HealthCloudGA__Provider__c</referenceTo>
    <relationshipLabel>Claim Providers</relationshipLabel>
    <relationshipName>Claim_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>