force-app/main/default/objects/ClaimProvider__x/fields/ProviderNPI__c.field-meta.xml
<CustomField>
    <fullName>ProviderNPI__c</fullName>
    <externalDeveloperName>providernpi</externalDeveloperName>
    <inlineHelpText>National Provider Identifier (NPI) identification number.</inlineHelpText>
    <label>Provider NPI</label>
    <length>64</length>
    <type>Text</type>
</CustomField>