force-app/main/default/objects/ClaimProvider__x/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <externalDeveloperName>role</externalDeveloperName>
    <inlineHelpText>Role of the provider such as rendering provider, service provider, or billing provider.</inlineHelpText>
    <label>Role</label>
    <length>64</length>
    <type>Text</type>
</CustomField>