force-app/main/default/objects/ClaimProvider__x/fields/SourceSystemModified__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemModified__c</fullName>
    <externalDeveloperName>sourcesystemmodified</externalDeveloperName>
    <inlineHelpText>Timestamp of the the most recent update from the source system.</inlineHelpText>
    <label>Source System Modified</label>
    <type>DateTime</type>
</CustomField>